--- a/learning/modules/computer-science/grovers.ipynb
+++ b/learning/modules/computer-science/grovers.ipynb
@@ -126,13 +126,13 @@
    "source": [
     "## Sketch of circuits in Grover's algorithm\n",
     "\n",
-    "A full mathematical walkthrough of Grover's algorithm can be found, for example, in Fundamentals of Quantum Algorithms, a course by John Watrous on IBM Quantum&reg; Learning. A condensed treatment is provided in an appendix at the end of this module. But for now, we will only review the overall structure of the quantum circuit that implements Grover's algorithm.\n",
+    "A full mathematical walkthrough of Grover's algorithm can be found, for example, in [Fundamentals of quantum algorithms](/learning/courses/fundamentals-of-quantum-algorithms), a course by John Watrous on IBM Quantum Learning. A condensed treatment is provided in an appendix at the end of this module. But for now, we will only review the overall structure of the quantum circuit that implements Grover's algorithm.\n",
     "\n",
-    "Grover's algorithm can be broken down into the following stages\n",
+    "Grover's algorithm can be broken down into the following stages:\n",
     "* Preparation of an initial superposition (applying Hadamard gates to all qubits)\n",
     "* \"Marking\" the target state(s) with a phase flip\n",
     "* A \"diffusion\" stage in which Hadamard gates and a phase flip are applied to __all__ qubits.\n",
-    "* Possible repetitions of the marking and diffusion stages to maximize the probability of measuring the target state.\n",
+    "* Possible repetitions of the marking and diffusion stages to maximize the probability of measuring the target state\n",
     "* Measurement\n",
     "\n",
     "![A quantum circuit diagram showing the basic setup of Grover's algorithm. This example uses four qubits.](/learning/images/modules/computer-science/grovers/grover-circuit-diagram-2.avif)"
@@ -150,7 +150,7 @@
     "H|0\\rangle = \\frac{1}{\\sqrt{2}}\\left(|0\\rangle+|1\\rangle\\right)\\\\\n",
     "H|1\\rangle = \\frac{1}{\\sqrt{2}}\\left(|0\\rangle-|1\\rangle\\right)\n",
     "$$\n",
-    "And its operation on any other state is defined through linearity.\n",
+    "Its operation on any other state is defined through linearity.\n",
     "In particularly, a layer of Hadamard gates allows us to go from the initial state with all qubits in $|0\\rangle$ (denoted $|0\\rangle^{\\otimes n}$) to a state where each qubit has some probability of being measured in either $|0\\rangle$ or $|1\\rangle;$ this lets us probe the space of all possible states differently from in classical computing.\n",
     "\n",
     "An important corollary property of the Hadamard gate is that acting a second time can undo such superposition states:\n",
@@ -193,7 +193,7 @@
     "\n",
     "Note the effect of this is that $Z_f$ flips the sign on a target state for which $f(x) = 1$ and leaves other states unaffected.\n",
     "\n",
-    "At a very high, hand-wavy level you can think about the steps in the circuit in the following ways:\n",
+    "At a very high, abstract level you can think about the steps in the circuit in the following ways:\n",
     "* First Hadamard layer: puts the qubits into a superposition of all possible states.\n",
     "* $Z_f$: mark the target state(s) by adding a \"-\" sign in front. This doesn't immediately change measurement probabilities, but it changes how the target state will behave in subsequent steps.\n",
     "* Another Hadamard layer: The \"-\" sign introduced in the previous step will change the relative sign between some terms. Since Hadamard gates turn one mixture of computational states $(|0\\rangle+|1\\rangle)/\\sqrt{2}$ into one computational state, $|0\\rangle,$ and they turn $(|0\\rangle-|1\\rangle)/\\sqrt{2}$ into $|1\\rangle$ this relative sign difference can now begin to play a role in what states are measured.\n",
@@ -258,9 +258,9 @@
     "$$\n",
     "That is, the probability of measuring $|01\\rangle$ is 100% (in the absence of noise and errors) and the probability for measuring any other state is zero.\n",
     "\n",
-    "This two-qubit example was an especially clean case; Grover's algorithm will not always work out to yield a 100% chance of measuring the target state. Rather it will amplify the probability of measuring the target state. Also, the Grover operator may need to be repeated more than once.\n",
+    "This two-qubit example was an especially clean case; Grover's algorithm will not always work out to yield a 100% chance of measuring the target state. Rather, it will amplify the probability of measuring the target state. Also, the Grover operator may need to be repeated more than once.\n",
     "\n",
-    "In the next section, we will put this algorithm into practice using real IBM quantum computers."
+    "In the next section, we will put this algorithm into practice using real IBM&reg; quantum computers."
    ]
   },
   {
@@ -272,7 +272,7 @@
     "\n",
     "In order to apply Grover's algorithm, we had to build the Grover operator, which means we must be able to flip the phase on states that satisfy our solution criteria. This begs the question: if we know our solution set so well that we can design a quantum circuit to label each one, what are we searching for?! The answer is three-fold, and we will revisit this throughout the tutorial:\n",
     "\n",
-    "**(1) These kinds of query algorithms often involve two parties**: one who has the oracle that establishes the solution criteria and another who is trying to guess/find a solution state. So the fact that one person can build the oracle does not negate the need for search.\n",
+    "**(1) These kinds of query algorithms often involve two parties**: one who has the oracle that establishes the solution criteria, and another who is trying to guess/find a solution state. The fact that one person can build the oracle does not negate the need for search.\n",
     "\n",
     "**(2) There are problems for which it is easier to specify a solution criterion than it is to find the solution.** The best-known example of this is probably identifying prime factors of large numbers. Grover's algorithm is not particularly effective at solving that specific problem; we would use Shor's algorithm for prime factoring. This is just an example to point out that knowing the criterion on the behavior of a state is not always the same as knowing the state.\n",
     "\n",
