--- a/learning/modules/computer-science/grovers.ipynb
+++ b/learning/modules/computer-science/grovers.ipynb
@@ -457,7 +457,7 @@
    "id": "5632a1dd",
    "metadata": {},
    "source": [
-    "If qubits 1-3 are in the $|1\\rangle$ state, and qubit 0 is initially in the $|0\\rangle$ state, the first X gate will flip qubit 0 to $|1\\rangle$ and all qubits will be in $|1\\rangle.$ This means the MCMT gate will apply an overall sign change or phase flip, as desired. For any other case, either qubits 1-3 are in the $|0\\rangle$ state, or qubit 0 is flipped to the $|0\\rangle$ state, and the phase flip will not be applied. So we see that this circuit does indeed mark our desired state $|0111\\rangle,$ or the bitstring `{1110}`."
+    "If qubits 1-3 are in the $|1\\rangle$ state, and qubit 0 is initially in the $|0\\rangle$ state, the first X gate will flip qubit 0 to $|1\\rangle$ and all qubits will be in $|1\\rangle.$ This means the MCMT gate will apply an overall sign change or phase flip, as desired. For any other case, either qubits 1-3 are in the $|0\\rangle$ state, or qubit 0 is flipped to the $|0\\rangle$ state, and the phase flip will not be applied. We see that this circuit does indeed mark our desired state $|0111\\rangle,$ or the bitstring `{1110}`."
    ]
   },
   {
@@ -465,7 +465,7 @@
    "id": "4cbe89d3",
    "metadata": {},
    "source": [
-    "The full Grover operator consists of the phase query gate (oracle), Hadamard layers, and also the $Z_\\text{OR}$ operator. We can use the built-in `grover_operator` to construct this from the oracle we defined above."
+    "The full Grover operator consists of the phase query gate (oracle), Hadamard layers, and the $Z_\\text{OR}$ operator. We can use the built-in `grover_operator` to construct this from the oracle we defined above."
    ]
   },
   {
@@ -500,7 +500,7 @@
     "(2t+1)\\theta = (2t+1)\\sin^{-1}\\left( \\sqrt{\\frac{|A_1|}{N}}\\right) \\approx (2t+1)\\sqrt{\\frac{|A_1|}{N}} \\approx \\frac{\\pi}{2}\\\\\n",
     "t\\approx \\frac{\\pi}{4} \\sqrt{\\frac{N}{|A_1|}}-\\frac{1}{2}\n",
     "$$\n",
-    "Here $A_1$ is the number of solutions or target states. On modern noisy quantum computers, the experimentally optimal number of iterations might be different. But here we calculate and use this theoretical, optimal number using $A_1=1$."
+    "Here $A_1$ is the number of solutions or target states. On modern noisy quantum computers, the experimentally optimal number of iterations might be different - but here we calculate and use this theoretical, optimal number using $A_1=1$."
    ]
   },
   {
@@ -529,7 +529,7 @@
    "id": "4698589c",
    "metadata": {},
    "source": [
-    "Let us now construct a circuit that includes the initial Hadamard gates to create a superposition of all possible states, and the Grover operator applied the optimal number of times."
+    "Let us now construct a circuit that includes the initial Hadamard gates to create a superposition of all possible states, and apply the Grover operator the optimal number of times."
    ]
   },
   {
@@ -569,7 +569,7 @@
     "\n",
     "## Step 2: Optimize problem for quantum hardware execution\n",
     "\n",
-    "We have defined our abstract quantum circuit, but we need to rewrite it in terms of gates that are native to the quantum computer we actually want to use. We also need to specify which qubits on the quantum computer should be used. For these reasons and others we now must transpile our circuit. First, let us specify the quantum computer we wish to use.\n",
+    "We have defined our abstract quantum circuit, but we need to rewrite it in terms of gates that are native to the quantum computer we actually want to use. We also need to specify which qubits on the quantum computer should be used. For these reasons and others, we now must transpile our circuit. First, let us specify the quantum computer we wish to use.\n",
     "\n",
     "There is code below for saving your credentials upon first use. Be sure to delete this information from the notebook after saving it to your environment, so that your credentials are not accidentally shared when you share the notebook. See [Set up your IBM Cloud account](/docs/guides/cloud-setup#3-connect-qiskit-with-your-service-instance) and [Initialize the service in an untrusted environment](/docs/guides/cloud-setup-untrusted) for more guidance."
    ]
@@ -676,9 +676,9 @@
     "\n",
     "## Execute using Qiskit primitives\n",
     "\n",
-    "We want to make many measurements and see which state is the most likely. Such an amplitude amplification is a sampling problem that is suitable for execution with the `Sampler` runtime primitive.\n",
+    "We want to make many measurements and see which state is the most likely. Such an amplitude amplification is a sampling problem that is suitable for execution with the `Sampler` Qiskit Runtime primitive.\n",
     "\n",
-    "Note that the run() method of Qiskit Runtime SamplerV2 takes an iterable of primitive unified blocks (PUBs). For sampler, each PUB is an iterable in the format (circuit, parameter_values). However, at a minimum, it takes a list of quantum circuit(s)."
+    "Note that the `run()` method of Qiskit Runtime SamplerV2 takes an iterable of primitive unified blocks (PUBs). For Sampler, each PUB is an iterable in the format (circuit, parameter_values). However, at a minimum, it takes a list of quantum circuit(s)."
    ]
   },
   {
@@ -703,7 +703,7 @@
    "id": "7a123100",
    "metadata": {},
    "source": [
-    "To get the most out of this experience, we highly recommend you run your experiments on the real quantum computers available from IBM Quantum. But if you have exhausted your QPU time, you may uncomment the lines below to complete this activity using a simulator."
+    "To get the most out of this experience, we highly recommend you run your experiments on the real quantum computers available from IBM Quantum. However, if you have exhausted your QPU time, you can uncomment the lines below to complete this activity using a simulator."
    ]
   },
   {
@@ -792,7 +792,7 @@
     "\n",
     "__Answer:__\n",
     "\n",
-    "No. Suppose we repeated the first activity with 20 qubits, and we run the quantum circuit a number of times `num_shots = 10,000`. A uniform probability distribution would mean that every state has a probability of $10,000/2^{20}=0.00954$ of being measured even a single time. If the probability of measuring the target state were 10 times that of non-solutions (and the probability of each non-solution were correspondingly slightly decreased) there would only be about a 10% chance of measuring the target state even once. It would be highly unlikely to measure the target state multiple times, which would make it indistinguishable from the many randomly-obtained non-solution states. The good news is that we can obtain even higher-fidelity results by using error suppression and mitigation.\n",
+    "No. Suppose we repeated the first activity with 20 qubits, and we run the quantum circuit a number of times `num_shots = 10,000`. A uniform probability distribution would mean that every state has a probability of $10,000/2^{20}=0.00954$ of being measured even a single time. If the probability of measuring the target state were 10 times that of non-solutions (and the probability of each non-solution were correspondingly slightly decreased), there would only be about a 10% chance of measuring the target state even once. It would be highly unlikely to measure the target state multiple times, which would make it indistinguishable from the many randomly-obtained non-solution states. The good news is that we can obtain even higher-fidelity results by using error suppression and mitigation.\n",
     "\n",
     "</details>\n",
     "\n",
@@ -846,7 +846,7 @@
    "id": "524f5577",
    "metadata": {},
    "source": [
-    "Now send this file to your partner (via email, messaging service, a shared repo, etc.). Have your partner send you their circuit as well. Make sure you save the file somewhere you can easily find it. Once you have your partner's circuit you could visualize it. But that breaks the query model. That is, we're modeling a situation in which you can query the oracle (use the oracle circuit) but not examine it to determine what state it targets."
+    "Now send this file to your partner (via email, messaging service, a shared repo, and so forth). Have your partner send you their circuit as well. Make sure you save the file somewhere you can easily find it. Once you have your partner's circuit, you could visualize it - but that breaks the query model. That is, we're modeling a situation in which you can query the oracle (use the oracle circuit) but not examine it to determine what state it targets."
    ]
   },
   {
