typo on quantum key distribution file

--- a/learning/modules/computer-science/quantum-key-distribution.ipynb
+++ b/learning/modules/computer-science/quantum-key-distribution.ipynb
@@ -5,7 +5,7 @@
    "id": "290dd4cc-b40a-4d36-9bba-3deda83df5c2",
    "metadata": {},
    "source": [
-    "{/* cspell:ignore cryptoquote crypogram WVXRWVW GSZG YVGGVI NZPV GSRH KIVGGB KVLKOV DROO SZEV VZHRVI GRNV HLOERMT  SLKV NZWV HRNKOV carrat URYYP JIGGY EDGRPOJNCUWQZVMK */}"
+    "{/* cspell:ignore cryptoquote WVXRWVW GSZG YVGGVI NZPV GSRH KIVGGB KVLKOV DROO SZEV VZHRVI GRNV HLOERMT  SLKV NZWV HRNKOV carrat URYYP JIGGY EDGRPOJNCUWQZVMK */}"
    ]
   },
   {
@@ -64,7 +64,7 @@
     "\n",
     "### Simple replacement\n",
     "\n",
-    "A simple replacement encryption is one in which one letter or number is replaced with another, such that there is a 1:1 mapping from the letters and numbers in a message, to the letters and numbers being used in an encrypted sequence. A pop-culture instance of these is the cryptoquote or crypogram puzzle, in which a quote or phrase is encrypted using simple replacement, and the player is tasked with decrypting it. These are easy to solve if they are long enough. Consider the example:\n",
+    "A simple replacement encryption is one in which one letter or number is replaced with another, such that there is a 1:1 mapping from the letters and numbers in a message, to the letters and numbers being used in an encrypted sequence. A pop-culture instance of these is the cryptoquote or cryptogram puzzle, in which a quote or phrase is encrypted using simple replacement, and the player is tasked with decrypting it. These are easy to solve if they are long enough. Consider the example:\n",
     "\n",
     "R  WVXRWVW  GSZG  R’W  YVGGVI NZPV  GSRH  KIVGGB\n",
     "OLMT.  GSZG  DZB,  KVLKOV  DROO  SZEV  ZM  VZHRVI\n",
