--- a/docs/guides/q-ctrl-performance-management.ipynb
+++ b/docs/guides/q-ctrl-performance-management.ipynb
@@ -105,6 +105,8 @@
    "source": [
     "## Get started\n",
     "\n",
+    "Fire Opal Performance Management uses Qiskit v`2.0.0`, which is the recommended version. Supported versions are Qiskit v`2.0.0` - `2.0.2`.\n",
+    "\n",
     "Authenticate using your [IBM Quantum Platform API key](http://quantum.cloud.ibm.com/), and select the Qiskit Function as follows:"
    ]
   },
