--- a/docs/guides/monitor-job.ipynb
+++ b/docs/guides/monitor-job.ipynb
@@ -58,14 +58,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "ee0318b6-0bfd-4f0b-b980-4e233a2d5d7b",
    "metadata": {
     "tags": [
      "remove-cell"
     ]
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "d2ss4mputc7s73an0md0\n"
+     ]
+    }
+   ],
    "source": [
     "# This cell is hidden from users\n",
     "from qiskit import QuantumCircuit\n",
@@ -107,7 +115,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 92,
+   "execution_count": 2,
    "id": "03946d0d-aeac-45d7-9e8e-6af38e40e758",
    "metadata": {},
    "outputs": [
@@ -115,7 +123,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "ExecutionSpans([DoubleSliceSpan(<start='2025-05-13 21:09:41', stop='2025-05-13 21:09:42', size=24>)])\n"
+      "ExecutionSpans([DoubleSliceSpan(<start='2025-09-04 16:46:22', stop='2025-09-04 16:46:23', size=24>)])\n"
      ]
     }
    ],
@@ -129,18 +137,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 90,
+   "execution_count": 3,
    "id": "897d35cb-140a-4587-a687-97982a01d846",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array([[0.59989399, 0.01375162, 0.16726117],\n",
-       "       [0.01981301, 0.42679907, 0.88858636]])"
+       "array([[0.28990128, 0.20627204, 0.41034826],\n",
+       "       [0.38494321, 0.90388651, 0.13690353]])"
       ]
      },
-     "execution_count": 90,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -152,7 +160,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 93,
+   "execution_count": 4,
    "id": "38176ecc-64fe-4dbb-a9fa-bd0ca2942920",
    "metadata": {},
    "outputs": [
@@ -169,7 +177,7 @@
        "        [ True,  True,  True,  True]]])"
       ]
      },
-     "execution_count": 93,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -227,7 +235,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "id": "e025fe52-f626-4ecc-bd1d-d559a6fe9cc8",
    "metadata": {},
    "outputs": [],
@@ -238,10 +246,10 @@
     "mask = spans[0].mask(0)\n",
     "\n",
     "# Decide whether the 0th shot of parameter set (1, 2) occurred in this span.\n",
-    "in_this_span = mask[1, 2, 0]\n",
+    "in_this_span = mask[2, 1, 0]\n",
     "\n",
     "# Create a new bit array containing only the PUB-1 data collected during this span.\n",
-    "bits = result[1].data.meas\n",
+    "bits = result[0].data.meas\n",
     "filtered_data = BitArray(bits.array[mask], bits.num_bits)"
    ]
   },
@@ -255,10 +263,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 17,
    "id": "71234371-5b93-42e3-add9-ce4133f9afc4",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "ExecutionSpans([DoubleSliceSpan(<start='2025-09-04 16:46:22', stop='2025-09-04 16:46:23', size=24>)])"
+      ]
+     },
+     "execution_count": 17,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# take the subset of spans that reference data in PUBs 0 or 2\n",
     "spans.filter_by_pub([0, 2])"
@@ -274,10 +293,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 18,
    "id": "f2c25fbb-581d-4847-a098-99f409b79fad",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Number of execution spans: 1\n",
+      "  Start of the first span: 2025-09-04 16:46:22.936924\n",
+      "     End of the last span: 2025-09-04 16:46:23.458428\n",
+      "       Total duration (s): 0.521504\n"
+     ]
+    }
+   ],
    "source": [
     "print(\"Number of execution spans:\", len(spans))\n",
     "print(\"  Start of the first span:\", spans.start)\n",
@@ -295,10 +325,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 19,
    "id": "2321f876-3c5e-4d1d-906e-d4cad55866f2",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      " Start of first span: 2025-09-04 16:46:22.936924\n",
+      "   End of first span: 2025-09-04 16:46:23.458428\n",
+      "#shots in first span: 24\n"
+     ]
+    }
+   ],
    "source": [
     "spans.sort()\n",
     "print(\" Start of first span:\", spans[0].start)\n",
@@ -327,7 +367,7 @@
  "metadata": {
   "description": "How to monitor or cancel a job submitted to IBM Quantum Platform or IBM Quantum on IBM Cloud",
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "runtime-tmp",
    "language": "python",
    "name": "python3"
   },
@@ -341,7 +381,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3"
+   "version": "3.12.8"
   },
   "title": "Monitor or cancel a job"
  },
