--- a/docs/guides/monitor-job.ipynb
+++ b/docs/guides/monitor-job.ipynb
@@ -367,7 +367,7 @@
  "metadata": {
   "description": "How to monitor or cancel a job submitted to IBM Quantum Platform or IBM Quantum on IBM Cloud",
   "kernelspec": {
-   "display_name": "runtime-tmp",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -381,7 +381,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.8"
+   "version": "3"
   },
   "title": "Monitor or cancel a job"
  },
