--- a/docs/guides/run-jobs-batch.ipynb
+++ b/docs/guides/run-jobs-batch.ipynb
@@ -345,7 +345,7 @@
  "metadata": {
   "description": "How to run quantum computing jobs in batch mode using Qiskit Runtime.",
   "kernelspec": {
-   "display_name": "qiskit-documentation-3.12",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -359,7 +359,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.8"
+   "version": "3"
   },
   "title": "Run jobs in a batch"
  },
