--- a/docs/guides/run-jobs-session.ipynb
+++ b/docs/guides/run-jobs-session.ipynb
@@ -218,8 +218,10 @@
     "    SparsePauliOp(\"XX\"),\n",
     "    SparsePauliOp(\"IY\"),\n",
     "]\n",
-    "mapped_observables = [ [observable.apply_layout(transpiled_circuit.layout)] \n",
-    "                      for observable in observables]\n",
+    "mapped_observables = [\n",
+    "    [observable.apply_layout(transpiled_circuit.layout)]\n",
+    "    for observable in observables\n",
+    "]\n",
     "\n",
     "sampler_pub = (transpiled_circuit_sampler, params)\n",
     "estimator_pub = (transpiled_circuit_sampler, mapped_observables, params)"
@@ -377,9 +379,7 @@
     "    # Return estimate of energy from estimator\n",
     "\n",
     "    energy = sum(\n",
-    "        estimator.run([(ansatz, hamiltonian, params)])\n",
-    "        .result()[0]\n",
-    "        .data.evs\n",
+    "        estimator.run([(ansatz, hamiltonian, params)]).result()[0].data.evs\n",
     "    )\n",
     "    return energy\n",
     "\n",
@@ -390,7 +390,9 @@
     "su2_ansatz = efficient_su2(hamiltonian.num_qubits)\n",
     "pm = generate_preset_pass_manager(backend=backend, optimization_level=3)\n",
     "ansatz = pm.run(su2_ansatz)\n",
-    "mapped_hamiltonian = [operator.apply_layout(ansatz.layout) for operator in hamiltonian]\n",
+    "mapped_hamiltonian = [\n",
+    "    operator.apply_layout(ansatz.layout) for operator in hamiltonian\n",
+    "]\n",
     "\n",
     "num_params = ansatz.num_parameters\n",
     "x0 = 2 * np.pi * np.random.random(num_params)\n",
@@ -401,7 +403,11 @@
     "# If using qiskit-ibm-runtime earlier than 0.24.0, change `mode=` to `session=`\n",
     "estimator = Estimator(mode=session, options={\"default_shots\": int(1e4)})\n",
     "res = minimize(\n",
-    "    cost_func, x0, args=(ansatz, mapped_hamiltonian, estimator), method=\"cobyla\", options={\"maxiter\": 25}\n",
+    "    cost_func,\n",
+    "    x0,\n",
+    "    args=(ansatz, mapped_hamiltonian, estimator),\n",
+    "    method=\"cobyla\",\n",
+    "    options={\"maxiter\": 25},\n",
     ")\n",
     "\n",
     "# Close the session because no context manager was used.\n",
@@ -437,7 +443,11 @@
     "\n",
     "def minimize_thread(estimator, method):\n",
     "    return minimize(\n",
-    "        cost_func, x0, args=(ansatz, mapped_hamiltonian, estimator), method=method, options={\"maxiter\": 25}\n",
+    "        cost_func,\n",
+    "        x0,\n",
+    "        args=(ansatz, mapped_hamiltonian, estimator),\n",
+    "        method=method,\n",
+    "        options={\"maxiter\": 25},\n",
     "    )\n",
     "\n",
     "\n",
@@ -478,7 +488,7 @@
  "metadata": {
   "description": "How to run a quantum computing job in a Qiskit Runtime session.",
   "kernelspec": {
-   "display_name": "runtime-tmp",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -492,7 +502,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.8"
+   "version": "3"
   },
   "title": "Run jobs in a session"
  },
