reduce max iterations to 1000

--- a/docs/tutorials/sample-based-quantum-diagonalization.ipynb
+++ b/docs/tutorials/sample-based-quantum-diagonalization.ipynb
@@ -156,7 +156,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 1,
    "id": "6e51c3d8",
    "metadata": {},
    "outputs": [],
@@ -187,7 +187,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 2,
    "id": "b821e660",
    "metadata": {},
    "outputs": [
@@ -241,7 +241,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 3,
    "id": "efe83d98",
    "metadata": {},
    "outputs": [
@@ -249,7 +249,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "E(CCSD) = -109.2177884185545  E_corr = -0.2879500329450041\n"
+      "E(CCSD) = -109.2177884185543  E_corr = -0.2879500329450045\n"
      ]
     }
    ],
@@ -273,7 +273,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 4,
    "id": "dd69a86c",
    "metadata": {},
    "outputs": [],
@@ -288,8 +288,11 @@
     "    t1=t1,\n",
     "    n_reps=n_reps,\n",
     "    interaction_pairs=(alpha_alpha_indices, alpha_beta_indices),\n",
+    "    # Setting optimize=True enables the \"compressed\" factorization\n",
     "    optimize=True,\n",
-    "    options={\"maxiter\": 1500},\n",
+    "    # Limit the number of optimization iterations to prevent the code cell from running\n",
+    "    # too long. Removing this line may improve results.\n",
+    "    options=dict(maxiter=1000),\n",
     ")\n",
     "\n",
     "nelec = (num_elec_a, num_elec_b)\n",
@@ -324,7 +327,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 5,
    "id": "53a039d8",
    "metadata": {},
    "outputs": [
@@ -371,7 +374,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 6,
    "id": "d9f56529",
    "metadata": {
     "tags": [
@@ -595,7 +598,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 7,
    "id": "7d554aa5",
    "metadata": {},
    "outputs": [
@@ -603,8 +606,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Gate counts (w/o pre-init passes): OrderedDict([('rz', 12399), ('sx', 12149), ('cz', 3986), ('x', 571), ('measure', 52), ('barrier', 1)])\n",
-      "Gate counts (w/ pre-init passes): OrderedDict([('sx', 7062), ('rz', 6974), ('cz', 1876), ('measure', 52), ('x', 38), ('barrier', 1)])\n"
+      "Gate counts (w/o pre-init passes): OrderedDict({'rz': 12438, 'sx': 12169, 'cz': 3986, 'x': 573, 'measure': 52, 'barrier': 1})\n",
+      "Gate counts (w/ pre-init passes): OrderedDict({'sx': 7059, 'rz': 6962, 'cz': 1876, 'measure': 52, 'x': 35, 'barrier': 1})\n"
      ]
     }
    ],
@@ -644,7 +647,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 8,
    "id": "93c1cef3-298e-4deb-8512-769fe94cd5a5",
    "metadata": {},
    "outputs": [],
@@ -655,7 +658,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 9,
    "id": "332ecab3-77e6-473f-b0e7-af30f983393a",
    "metadata": {},
    "outputs": [],
@@ -682,7 +685,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 10,
    "id": "2f32a352",
    "metadata": {},
    "outputs": [
@@ -692,54 +695,54 @@
      "text": [
       "Iteration 1\n",
       "\tSubsample 0\n",
-      "\t\tEnergy: -109.02814511582454\n",
-      "\t\tSubspace dimension: 96721\n",
+      "\t\tEnergy: -108.97781410104506\n",
+      "\t\tSubspace dimension: 28561\n",
       "\tSubsample 1\n",
-      "\t\tEnergy: -109.02814511582454\n",
-      "\t\tSubspace dimension: 96721\n",
+      "\t\tEnergy: -108.97781410104506\n",
+      "\t\tSubspace dimension: 28561\n",
       "\tSubsample 2\n",
-      "\t\tEnergy: -109.02814511582454\n",
-      "\t\tSubspace dimension: 96721\n",
+      "\t\tEnergy: -108.97781410104506\n",
+      "\t\tSubspace dimension: 28561\n",
       "Iteration 2\n",
       "\tSubsample 0\n",
-      "\t\tEnergy: -109.12531666621864\n",
-      "\t\tSubspace dimension: 323761\n",
+      "\t\tEnergy: -109.05150860754739\n",
+      "\t\tSubspace dimension: 287296\n",
       "\tSubsample 1\n",
-      "\t\tEnergy: -109.12383256562484\n",
-      "\t\tSubspace dimension: 342225\n",
+      "\t\tEnergy: -109.08152283263908\n",
+      "\t\tSubspace dimension: 264196\n",
       "\tSubsample 2\n",
-      "\t\tEnergy: -109.1319728437729\n",
-      "\t\tSubspace dimension: 344569\n",
+      "\t\tEnergy: -109.11636893067873\n",
+      "\t\tSubspace dimension: 284089\n",
       "Iteration 3\n",
       "\tSubsample 0\n",
-      "\t\tEnergy: -109.16643417090869\n",
-      "\t\tSubspace dimension: 516961\n",
+      "\t\tEnergy: -109.15878555367885\n",
+      "\t\tSubspace dimension: 429025\n",
       "\tSubsample 1\n",
-      "\t\tEnergy: -109.1683666492047\n",
-      "\t\tSubspace dimension: 516961\n",
+      "\t\tEnergy: -109.16462831275786\n",
+      "\t\tSubspace dimension: 473344\n",
       "\tSubsample 2\n",
-      "\t\tEnergy: -109.16372581974235\n",
-      "\t\tSubspace dimension: 495616\n",
+      "\t\tEnergy: -109.15895026995382\n",
+      "\t\tSubspace dimension: 435600\n",
       "Iteration 4\n",
       "\tSubsample 0\n",
-      "\t\tEnergy: -109.17919434323682\n",
-      "\t\tSubspace dimension: 677329\n",
+      "\t\tEnergy: -109.17784051223317\n",
+      "\t\tSubspace dimension: 622521\n",
       "\tSubsample 1\n",
-      "\t\tEnergy: -109.17374281060152\n",
-      "\t\tSubspace dimension: 654481\n",
+      "\t\tEnergy: -109.1774651326829\n",
+      "\t\tSubspace dimension: 657721\n",
       "\tSubsample 2\n",
-      "\t\tEnergy: -109.18225363149531\n",
-      "\t\tSubspace dimension: 695556\n",
+      "\t\tEnergy: -109.18085212360191\n",
+      "\t\tSubspace dimension: 617796\n",
       "Iteration 5\n",
       "\tSubsample 0\n",
-      "\t\tEnergy: -109.18769814753352\n",
-      "\t\tSubspace dimension: 817216\n",
+      "\t\tEnergy: -109.18636242518915\n",
+      "\t\tSubspace dimension: 815409\n",
       "\tSubsample 1\n",
-      "\t\tEnergy: -109.18553781753295\n",
-      "\t\tSubspace dimension: 883600\n",
+      "\t\tEnergy: -109.18451014767518\n",
+      "\t\tSubspace dimension: 837225\n",
       "\tSubsample 2\n",
-      "\t\tEnergy: -109.18616268704218\n",
-      "\t\tSubspace dimension: 876096\n"
+      "\t\tEnergy: -109.18333728638888\n",
+      "\t\tSubspace dimension: 857476\n"
      ]
     }
    ],
@@ -811,14 +814,14 @@
    "source": [
     "### Visualize the results\n",
     "\n",
-    "The first plot shows that after a couple of iterations we estimate the ground state energy within ``~69 mH`` (chemical accuracy is typically accepted to be ``1 kcal/mol`` $\\approx$ ``1.6 mH``). The energy can be improved by allowing more iterations of configuration recovery or increasing the number of samples per batch.\n",
+    "The first plot shows that after a couple of iterations we estimate the ground state energy within ``~41 mH`` (chemical accuracy is typically accepted to be ``1 kcal/mol`` $\\approx$ ``1.6 mH``). The energy can be improved by allowing more iterations of configuration recovery or increasing the number of samples per batch.\n",
     "\n",
     "The second plot shows the average occupancy of each spatial orbital after the final iteration. We can see that both the spin-up and spin-down electrons occupy the first five orbitals with high probability in our solutions."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 11,
    "id": "caffd888-e89c-4aa9-8bae-4d1bb723b35e",
    "metadata": {},
    "outputs": [
