--- a/docs/migration-guides/index.mdx
+++ b/docs/migration-guides/index.mdx
@@ -6,28 +6,4 @@ description: Migrate to using the newest from Qiskit and Qiskit Runtime
 
 # Introduction to migration guides
 
-These migration guides help you more effectively use Qiskit and Qiskit Runtime:
-
-* Migrate to the new version of IBM Quantum&reg; Platform
-   * [Migrate to the upgraded IBM Quantum Platform](/docs/migration-guides/classic-iqp-to-cloud-iqp)
-   * [Migrate from using the Qiskit Runtime REST API on IBM Quantum Platform Classic to using the new Qiskit Runtime REST API](/docs/migration-guides/migrate-classic-rest-api#from-classic)
-   * [Migrate from using the Qiskit Runtime on IBM Cloud REST API to using the REST API for the new version of IBM Quantum Platform](/docs/migration-guides/migrate-classic-rest-api#from-runtime-cloud)
-* Migrate to Qiskit v1.0
-   * [Install the new Qiskit v1.0 package](/docs/migration-guides/qiskit-1.0-installation)
-   * [Overview of Qiskit v1.0 packaging changes](/docs/migration-guides/metapackage-migration)
-   * [Qiskit v1.0 feature changes](/docs/migration-guides/qiskit-1.0-features)
-* [Migrate to the Qiskit Runtime V2 primitives](/docs/migration-guides/v2-primitives)
-* [Migrate to local simulators](/docs/migration-guides/local-simulators)
-* Migrate from `backend.run` to primitives
-   * [Overview](/docs/migration-guides/qiskit-runtime)
-   * [Migrate from `qiskit-ibmq-provider`](/docs/migration-guides/qiskit-runtime-from-ibmq-provider)
-   * [Migrate from `qiskit_ibm_provider`](/docs/migration-guides/qiskit-runtime-from-ibm-provider)
-   * [Migrate to primitives for users of third-party providers with `backend.run`](/docs/migration-guides/qiskit-backend-primitives)
-   * [Migrate options](/docs/migration-guides/qiskit-runtime-options)
-   * [Common use cases](/docs/migration-guides/qiskit-runtime-use-case)
-   * [Examples](/docs/migration-guides/qiskit-runtime-examples)
-* [Migrate third-party provider interfaces from backend.run to primitives](/docs/migration-guides/external-providers-primitives-v2)
-* Qiskit 0.44 changes
-   * [`qiskit.algorithms` new interface](/docs/migration-guides/qiskit-algorithms-module)
-   * [`qiskit.opflow` deprecation](/docs/migration-guides/qiskit-opflow-module)
-   * [`QuantumInstance` deprecation](/docs/migration-guides/qiskit-quantum-instance)
+These migration guides help you more effectively use Qiskit and Qiskit Runtime. Be sure to check the [Latest updates page](/docs/guides/latest-updates) frequently.
