German plural for ansatz

--- a/learning/modules/computer-science/vqe.ipynb
+++ b/learning/modules/computer-science/vqe.ipynb
@@ -6,7 +6,7 @@
    "id": "a9fc5202-9641-4db3-ac1a-9986f28854bc",
    "metadata": {},
    "source": [
-    "{/* cspell:ignore verticalalignment horizontalalignment  xytext arrowprops preparable ansatzes ansätze Marov Aspuru Guzik Hartrees */}"
+    "{/* cspell:ignore verticalalignment horizontalalignment  xytext arrowprops preparable ansätze Marov Aspuru Guzik Hartrees */}"
    ]
   },
   {
@@ -275,7 +275,7 @@
     "\n",
     "#### (Quantum) Ansatz: The trial wave function (How to build a trivial quantum state with a quantum circuit)\n",
     "\n",
-    "For VQE, the ansatz (plural: Ansatzes) consists of two key components. The first is initial state preparation, which sets up the qubit's state by applying quantum gates with no variational parameter. The second component is the parameterized quantum circuit, a special quantum circuit with adjustable parameters, similar to dials on a radio. These parameters will be used for the last part — the classical optimizer — to help us reach the best possible ground state.\n",
+    "For VQE, the ansatz (plural: ansätze) consists of two key components. The first is initial state preparation, which sets up the qubit's state by applying quantum gates with no variational parameter. The second component is the parameterized quantum circuit, a special quantum circuit with adjustable parameters, similar to dials on a radio. These parameters will be used for the last part — the classical optimizer — to help us reach the best possible ground state.\n",
     "\n",
     "In the variational principle section, we learned that the quality of the trial state affects the quality of the results of the variational algorithm. This means that choosing a good ansatz is important in VQE. Once again, this is a rich and complex topic. We will not cover the different types of ansatz or their origins here. If you're interested in learning more about parameterized quantum circuits and ansatz, you can explore the [Ansatz and variational form](/learning/courses/variational-algorithm-design/ansaetze-and-variational-forms) lesson from the [Variational algorithm design course](/learning/courses/variational-algorithm-design/index), which provides detailed explanations and examples of ansatz.\n",
     "\n",
@@ -486,15 +486,15 @@
    "source": [
     "Next, we need a parameterized quantum circuit, an ansatz, to prepare a trial wave function $\\Psi_\\text{trial}$ for the ground state. The goal is to find the parameters $\\theta$ that minimize the energy expectation value $\\langle\\psi(\\theta)|\\hat{H}|\\psi(\\theta)\\rangle$. The choice of ansatz is crucial because it determines the set of possible quantum states that our circuit can prepare. A \"good\" ansatz is one that is flexible enough to represent a state very close to the true ground state of the Hamiltonian we are studying, but not so complex that it requires too many parameters or too deep a circuit for current quantum computers.\n",
     "\n",
-    "Here, we will try three different one-qubit ansatzes to see which one provides better \"coverage\" of the possible quantum states a single qubit can be in. The \"coverage\" refers to the range of quantum states that the ansatz circuit can produce by varying its parameters.\n",
+    "Here, we will try three different one-qubit ansätze to see which one provides better \"coverage\" of the possible quantum states a single qubit can be in. The \"coverage\" refers to the range of quantum states that the ansatz circuit can produce by varying its parameters.\n",
     "\n",
-    "We will use three ansatzes based on different combinations of single-qubit rotational gates:\n",
+    "We will use three ansätze based on different combinations of single-qubit rotational gates:\n",
     "\n",
     "- One 1-axis rotational gate ansatz: This ansatz uses rotations around only a single axis ($R_x(\\theta)$). On the Bloch sphere, this corresponds to moving only along a specific circle. This is the least flexible and covers a limited set of states.\n",
-    "- Two 2-axis rotational gate ansatzes: These ansatzes combines rotations around two different axes ($R_x(\\theta_1) R_z(\\theta_2)$ and $R_x(\\theta_1) R_z(\\theta_2) R_x(\\theta_3)$). This allows us to reach a larger portion of the Bloch sphere, compared to a single-axis rotation.\n",
+    "- Two 2-axis rotational gate ansätze: These ansätze combines rotations around two different axes ($R_x(\\theta_1) R_z(\\theta_2)$ and $R_x(\\theta_1) R_z(\\theta_2) R_x(\\theta_3)$). This allows us to reach a larger portion of the Bloch sphere, compared to a single-axis rotation.\n",
     "\n",
     "\n",
-    "By comparing the VQE results obtained with these three ansatzes, we can see how the flexibility and state-space coverage of the ansatz impact our ability to find the true ground state energy of our simplified Hamiltonian. A more flexible ansatz has the *potential* to find a better approximation, but it might also be harder for the classical optimizer."
+    "By comparing the VQE results obtained with these three ansätze, we can see how the flexibility and state-space coverage of the ansatz impact our ability to find the true ground state energy of our simplified Hamiltonian. A more flexible ansatz has the *potential* to find a better approximation, but it might also be harder for the classical optimizer."
    ]
   },
   {
@@ -1583,7 +1583,7 @@
     "\n",
     "1. Ansatz selection challenges\n",
     "\n",
-    "There is an inherent challenge in selecting the right variational ansatz. Chemistry-inspired ansatzes (like UCCSD) provide physical accuracy but require deep circuits, while hardware-efficient ansatzes have shallower circuits but may lack physical interpretability. Also, many ansatzes introduce excessive variational parameters that contribute little to improving accuracy but significantly increase optimization difficulty.\n",
+    "There is an inherent challenge in selecting the right variational ansatz. Chemistry-inspired ansätze (like UCCSD) provide physical accuracy but require deep circuits, while hardware-efficient ansätze have shallower circuits but may lack physical interpretability. Also, many ansätze introduce excessive variational parameters that contribute little to improving accuracy but significantly increase optimization difficulty.\n",
     "\n",
     "2. Optimization difficulties\n",
     "\n",
@@ -1594,7 +1594,7 @@
     "\n",
     "One more well-known challenge is optimizer overhead, which is related to the scale of the problem. The quantum circuits required for VQE grow in depth and complexity as the problem size increases; this typically also increases the number of parameters to optimize. The optimization process becomes intractable as the number of parameters increases, leading to slow convergence and difficulties in finding the optimal solution.\n",
     "\n",
-    "Here we will take a look at these challenges by using VQE for a $H_2$ molecule, with two different types of ansatzes.\n",
+    "Here we will take a look at these challenges by using VQE for a $H_2$ molecule, with two different types of ansatz.\n",
     "\n",
     "(Note: This can take more QPU time, so feel free to use a simulator for this if you don't have enough time.)"
    ]
@@ -1880,7 +1880,7 @@
    "source": [
     "The graph above clearly demonstrates that the optimization process of the ansatz with more variables takes more time to get to stable convergence.\n",
     "\n",
-    "Rather than relying on simple single-qubit circuits and a straightforward ansatz, the complexity of optimization increases when larger quantum circuits and more complex structured ansatzes are required. This highlights a well-known challenge in VQEs: the overhead of the optimizer.\n",
+    "Rather than relying on simple single-qubit circuits and a straightforward ansatz, the complexity of optimization increases when larger quantum circuits and more complex structured ansätze are required. This highlights a well-known challenge in VQEs: the overhead of the optimizer.\n",
     "\n",
     "Researchers continue to develop various advanced methodologies that can use quantum computers for chemistry problems. You can access a variety of educational materials at [IBM Quantum Learning](https://quantum.cloud.ibm.com/learning/en)."
    ]
