--- a/learning/modules/computer-science/vqe.ipynb
+++ b/learning/modules/computer-science/vqe.ipynb
@@ -277,7 +277,7 @@
     "\n",
     "For VQE, the ansatz (plural: ansätze) consists of two key components. The first is initial state preparation, which sets up the qubit's state by applying quantum gates with no variational parameter. The second component is the parameterized quantum circuit, a special quantum circuit with adjustable parameters, similar to dials on a radio. These parameters will be used for the last part — the classical optimizer — to help us reach the best possible ground state.\n",
     "\n",
-    "In the variational principle section, we learned that the quality of the trial state affects the quality of the results of the variational algorithm. This means that choosing a good ansatz is important in VQE. Once again, this is a rich and complex topic. We will not cover the different types of ansatz or their origins here. If you're interested in learning more about parameterized quantum circuits and ansatz, you can explore the [Ansatz and variational form](/learning/courses/variational-algorithm-design/ansaetze-and-variational-forms) lesson from the [Variational algorithm design course](/learning/courses/variational-algorithm-design/index), which provides detailed explanations and examples of ansatz.\n",
+    "In the variational principle section, we learned that the quality of the trial state affects the quality of the results of the variational algorithm. This means that choosing a good ansatz is important in VQE. Once again, this is a rich and complex topic. We will not cover the different types of ansatz or their origins here. If you're interested in learning more about parameterized quantum circuits and ansatz, you can explore the [Ansatz and variational form](/learning/courses/variational-algorithm-design/ansaetze-and-variational-forms) lesson from the [Variational algorithm design course](/learning/courses/variational-algorithm-design/index), which provides detailed explanations and examples of ansätze.\n",
     "\n",
     "Since we are going to use a one-qubit Hamiltonian in this module, we need a one-qubit parameterized quantum circuit as an ansatz. We will see three types of one-qubit ansatz in the following section. We will compare them and discuss key considerations in selecting an ansatz."
    ]
@@ -1727,7 +1727,7 @@
     }
    ],
    "source": [
-    "# QPU time 4m for ibm_brisbane\n",
+    "# QPU time 3m 40s for ibm_brisbane\n",
     "# Step 3: Execute on target hardware\n",
     "\n",
     "from scipy.optimize import minimize\n",
@@ -1801,7 +1801,7 @@
     }
    ],
    "source": [
-    "# QPU time 4m for ibm_brisbane\n",
+    "# QPU time 3m 40s for ibm_brisbane\n",
     "\n",
     "x0 = np.ones(ansatz_2.num_parameters)\n",
     "\n",
