--- a/learning/modules/computer-science/vqe.ipynb
+++ b/learning/modules/computer-science/vqe.ipynb
@@ -1594,7 +1594,7 @@
     "\n",
     "One more well-known challenge is optimizer overhead, which is related to the scale of the problem. The quantum circuits required for VQE grow in depth and complexity as the problem size increases; this typically also increases the number of parameters to optimize. The optimization process becomes intractable as the number of parameters increases, leading to slow convergence and difficulties in finding the optimal solution.\n",
     "\n",
-    "Here we will take a look at these challenges by using VQE for a $H_2$ molecule, with two different types of ansatz.\n",
+    "Here we will take a look at these challenges by using VQE for a $H_2$ molecule, with two different types of ansätze.\n",
     "\n",
     "(Note: This can take more QPU time, so feel free to use a simulator for this if you don't have enough time.)"
    ]
