--- a/learning/modules/computer-science/vqe.ipynb
+++ b/learning/modules/computer-science/vqe.ipynb
@@ -6,7 +6,7 @@
    "id": "a9fc5202-9641-4db3-ac1a-9986f28854bc",
    "metadata": {},
    "source": [
-    "{/* cspell:ignore verticalalignment horizontalalignment  xytext arrowprops preparable ansätze Marov Aspuru Guzik Hartrees */}"
+    "{/* cspell:ignore verticalalignment horizontalalignment  xytext arrowprops preparable ansätze Marov Aspuru Guzik Hartrees ansä */}"
    ]
   },
   {
