--- a/docs/migration-guides/qiskit-algorithms-module.mdx
+++ b/docs/migration-guides/qiskit-algorithms-module.mdx
@@ -6,6 +6,10 @@ description: How to update your code to use the new interface for `qiskit.algori
 
 # Algorithms migration guide
 
+<Admonition type="note">
+This guide is no longer maintained. It is archived in GitHub for historical reference only.
+</Admonition>
+
 <Admonition type="caution">
   **Deprecation Notice**
 
