--- a/docs/migration-guides/qiskit-opflow-module.mdx
+++ b/docs/migration-guides/qiskit-opflow-module.mdx
@@ -7,6 +7,10 @@ description: How to update your code to stop using the deprecated `qiskit.opflow
 
 # Opflow migration guide
 
+<Admonition type="note">
+This guide is no longer maintained. It is archived in GitHub for historical reference only.
+</Admonition>
+
 <Admonition type="caution">
   **Deprecation Notice**
 
