Goodbye backend.run

--- a/docs/migration-guides/qiskit-backend-primitives.mdx
+++ b/docs/migration-guides/qiskit-backend-primitives.mdx
@@ -6,6 +6,10 @@ description: Migrate to primitives for users of third-party providers with `back
 
 # Migrate to primitives for users of third-party providers with `backend.run`
 
+<Admonition type="note">
+This guide is no longer maintained. It is archived in GitHub for historical reference only.
+</Admonition>
+
 The `backend.run` interface was the primary access point to quantum hardware and simulators offered by third-party providers that integrate with Qiskit. The evolution of [user access patterns for QPUs](/docs/migration-guides/qiskit-runtime#why-migrate-to-qiskit-runtime-primitives) led to the Qiskit primitives (`Sampler` and `Estimator`) superseding this interface. However, not all third-party providers have transitioned to the primitives framework, and `backend.run` remains in Qiskit for backward compatibility.
 
 This guide is for you if you have written or want to write code using `Sampler` and `Estimator`
