--- a/docs/migration-guides/qiskit-runtime-examples.mdx
+++ b/docs/migration-guides/qiskit-runtime-examples.mdx
@@ -6,6 +6,10 @@ description: Examples of migrating from using backend.run to using Qiskit Runtim
 
 # End-to-end examples
 
+<Admonition type="note">
+This guide is no longer maintained. It is archived in GitHub for historical reference only.
+</Admonition>
+
 Follow these examples to design a Qiskit Runtime algorithm.
 
 <span id="estimator-algorithm"></span>
