--- a/docs/migration-guides/qiskit-runtime-from-ibm-provider.mdx
+++ b/docs/migration-guides/qiskit-runtime-from-ibm-provider.mdx
@@ -6,6 +6,10 @@ description: Migrate from backend.run in qiskit-ibm-provider to using Qiskit Run
 
 # Migrate from `qiskit_ibm_provider`
 
+<Admonition type="note">
+This guide is no longer maintained. It is archived in GitHub for historical reference only.
+</Admonition>
+
 This topic shows how to migrate code that implemented `IBMBackend.run()`
 by using `qiskit_ibm_provider` to use `qiskit_ibm_runtime`.
 
