--- a/docs/migration-guides/qiskit-runtime-from-ibmq-provider.mdx
+++ b/docs/migration-guides/qiskit-runtime-from-ibmq-provider.mdx
@@ -5,6 +5,10 @@ description: How to migrate `backend.run()` from qiskit-ibmq-provider to Qiskit 
 
 # Migrate from `qiskit_ibmq_provider`
 
+<Admonition type="note">
+This guide is no longer maintained. It is archived in GitHub for historical reference only.
+</Admonition>
+
 This topic describes how to migrate code from the legacy IBMQ provider
 `qiskit-ibmq-provider` package to use Qiskit Runtime
 `qiskit-ibm-runtime`.
