--- a/docs/migration-guides/qiskit-runtime.mdx
+++ b/docs/migration-guides/qiskit-runtime.mdx
@@ -9,6 +9,10 @@ in_page_toc_max_heading_level: 2
 <span id="migrate-to-qr"></span>
 # Migrate from backend.run to Qiskit Runtime primitives
 
+<Admonition type="note">
+This guide is no longer maintained. It is archived in GitHub for historical reference only.
+</Admonition>
+
 This guide describes key patterns of behavior and use cases with code
 examples to help you migrate code from the legacy `backend.run` interface to use the Qiskit Runtime primitives interface (`qiskit-ibm-runtime` package).
 
