--- a/docs/migration-guides/external-providers-primitives-v2.mdx
+++ b/docs/migration-guides/external-providers-primitives-v2.mdx
@@ -6,6 +6,10 @@ description: Migrate to the primitives interface in external providers
 
 # Migrate third-party provider interfaces from `backend.run` to primitives
 
+<Admonition type="note">
+This guide is no longer maintained. It is archived in GitHub for historical reference only.
+</Admonition>
+
 ## Why should third-party providers implement primitives?
 
 The Qiskit SDK is built to support third parties in creating external providers of quantum resources.
