--- a/docs/migration-guides/qiskit-runtime-options.mdx
+++ b/docs/migration-guides/qiskit-runtime-options.mdx
@@ -8,6 +8,10 @@ in_page_toc_max_heading_level: 2
 
 # Migrate options
 
+<Admonition type="note">
+This guide is no longer maintained. It is archived in GitHub for historical reference only.
+</Admonition>
+
 All `backend.run` options are now available through the Qiskit Runtime primitives, but there are additional options available with the V2 primitives.  See the [API reference](/docs/api/qiskit-ibm-runtime/options) for the full list of available options. See [End-to-end examples](qiskit-runtime-examples) and [Advanced Qiskit Runtime options](/docs/guides/runtime-options-overview) for more information about specifying V2 primitives options.
 
 | backend.run options | V2 Primitive options                                                                                                  | Notes                                                                                                                                |
