Authenticate to functions catalog automatically

--- a/docs/guides/q-ctrl-performance-management.ipynb
+++ b/docs/guides/q-ctrl-performance-management.ipynb
@@ -105,21 +105,19 @@
    "source": [
     "## Get started\n",
     "\n",
-    "Authenticate using your [IBM Quantum Platform API key](http://quantum.cloud.ibm.com/), and select the Qiskit Function as follows:"
+    "Authenticate using your [IBM Quantum Platform API key](http://quantum.cloud.ibm.com/), and select the Qiskit Function as follows. (This snippet assumes you've already [saved your account](/docs/guides/functions#install-qiskit-functions-catalog-client) to your local environment.)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "11af8fb4",
    "metadata": {},
    "outputs": [],
    "source": [
     "from qiskit_ibm_catalog import QiskitFunctionsCatalog\n",
     "\n",
-    "catalog = QiskitFunctionsCatalog(\n",
-    "    channel=\"ibm_quantum_platform\", instance=\"USER_CRN\", token=\"USER_API_KEY\"\n",
-    ")\n",
+    "catalog = QiskitFunctionsCatalog(channel=\"ibm_quantum_platform\")\n",
     "\n",
     "# Access Function\n",
     "perf_mgmt = catalog.load(\"q-ctrl/performance-management\")"
