--- a/docs/guides/q-ctrl-optimization-solver.ipynb
+++ b/docs/guides/q-ctrl-optimization-solver.ipynb
@@ -139,21 +139,19 @@
    "source": [
     "## Get started\n",
     "\n",
-    "First, authenticate using your [IBM Quantum API key](http://quantum.cloud.ibm.com/). Then, select the Qiskit Function as follows:"
+    "First, authenticate using your [IBM Quantum API key](http://quantum.cloud.ibm.com/). Then, select the Qiskit Function as follows. (This snippet assumes you've already [saved your account](/docs/guides/functions#install-qiskit-functions-catalog-client) to your local environment.)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "95a715d2",
    "metadata": {},
    "outputs": [],
    "source": [
     "from qiskit_ibm_catalog import QiskitFunctionsCatalog\n",
     "\n",
-    "catalog = QiskitFunctionsCatalog(\n",
-    "    channel=\"ibm_quantum_platform\", instance=\"USER_CRN\", token=\"USER_API_KEY\"\n",
-    ")\n",
+    "catalog = QiskitFunctionsCatalog(channel=\"ibm_quantum_platform\")\n",
     "\n",
     "# Access Function\n",
     "solver = catalog.load(\"q-ctrl/optimization-solver\")"
