--- a/docs/guides/qunova-chemistry.ipynb
+++ b/docs/guides/qunova-chemistry.ipynb
@@ -109,7 +109,7 @@
     "## Get started\n",
     "\n",
     "First, [request access to the function](https://forms.office.com/r/zN3hvMTqJ1).\n",
-    "Then, authenticate using your [IBM Quantum&reg; API key](http://quantum.cloud.ibm.com/) and select the Qiskit Function as follows:"
+    "Then, authenticate using your [IBM Quantum&reg; API key](http://quantum.cloud.ibm.com/) and, assuming you've already [saved your account](/docs/guides/functions#install-qiskit-functions-catalog-client) to your local environment, select the Qiskit Function as follows:"
    ]
   },
   {
@@ -122,9 +122,7 @@
     "import reprlib\n",
     "from qiskit_ibm_catalog import QiskitFunctionsCatalog\n",
     "\n",
-    "catalog = QiskitFunctionsCatalog(\n",
-    "    channel=\"ibm_quantum_platform\", instance=\"USER_CRN\", token=\"USER_API_KEY\"\n",
-    ")\n",
+    "catalog = QiskitFunctionsCatalog(channel=\"ibm_quantum_platform\")\n",
     "\n",
     "function = catalog.load(\"qunova/hivqe-chemistry\")"
    ]
