added link to YT video

--- a/learning/courses/quantum-computing-in-practice/simulating-nature.ipynb
+++ b/learning/courses/quantum-computing-in-practice/simulating-nature.ipynb
@@ -15,7 +15,7 @@
    "source": [
     "# Simulating nature\n",
     "\n",
-    "Watch this video from Olivia Lanes on simulating nature with quantum computers.\n",
+    "Watch this video from Olivia Lanes on simulating nature with quantum computers, or open the video in a separate window on [YouTube.](https://www.youtube.com/watch?v=7cbNnxDHqeQ&list=PLOFEBzvs-VvoZxe2ClFy27yOt6VzsTEJK&index=7)\n",
     "\n",
     "<IBMVideo id=\"134460549\" title=\"In this video, Olivia Lanes describes how a quantum computer can be used to simulate nature, including at the utility scale.\"/>\n",
     "\n",
