modified coin description

--- a/learning/courses/quantum-business-foundations/quantum-computing-fundamentals.mdx
+++ b/learning/courses/quantum-business-foundations/quantum-computing-fundamentals.mdx
@@ -75,7 +75,7 @@ In the following video, Director of Research at IBM, Darío Gil, contrasts the m
 
 ### Superposition
 
-A **superposition** is a weighted sum or difference of two or more states. This mixture of states is often difficult for people to picture (like a flipped coin landing on a mixture of the two sides, heads and tails). But there are easier cases to imagine—for example, when a chord of several musical notes is played on a guitar. The vibration of the air corresponds not merely to one of the notes, but to all. The air is vibrating with a combination of frequencies corresponding to all the notes in the chord. The  "weighted sum or difference" means that some parts of the superposition are more or less prominently represented, such as when a violin is played more loudly than the other instruments in a string quartet. Ordinary, or classical, superpositions commonly occur in macroscopic phenomena involving waves. So superposition may actually be a familiar concept.
+A **superposition** is a weighted sum or difference of two or more states. This mixture of states is often difficult for people to picture (like a flipped coin being in a mixture of both heads and tails at once). But there are easier cases to imagine—for example, when a chord of several musical notes is played on a guitar. The vibration of the air corresponds not merely to one of the notes, but to all. The air is vibrating with a combination of frequencies corresponding to all the notes in the chord. The  "weighted sum or difference" means that some parts of the superposition are more or less prominently represented, such as when a violin is played more loudly than the other instruments in a string quartet. Ordinary, or classical, superpositions commonly occur in macroscopic phenomena involving waves. So superposition may actually be a familiar concept.
 
 What is strange and specific to the quantum world is that, upon measuring a system in a superposition of states, the system collapses into just one of the pure states. The musical analog would be playing a chord of several notes, letting that chord propagate through the air to your ear, but hearing (measuring) only one of the several notes played. Nothing like this exists in the macroscopic world.
 
