--- a/docs/guides/qpu-information.mdx
+++ b/docs/guides/qpu-information.mdx
@@ -108,17 +108,10 @@ You can also view your available QPUs by using the [backends API.](/docs/api/qis
 <span id="native-gates"></span>
 ## List of native gates and operations
 
-| Name |  Notes |
+| Operation category |  Name |
 | :--- | :--- |
-| [CZ](/docs/api/qiskit/qiskit.circuit.library.CZGate) | two-qubit gate |
-| [ECR](/docs/api/qiskit/qiskit.circuit.library.ECRGate) | two-qubit gate |
-| [RZZ](/docs/api/qiskit/qiskit.circuit.library.RZZGate) | two-qubit fractional gate |
-| [RX](/docs/api/qiskit/qiskit.circuit.library.RXGate) | single-qubit fractional gate |
-| [RZ](/docs/api/qiskit/qiskit.circuit.library.RZGate) | single-qubit gate |
-| [SX](/docs/api/qiskit/qiskit.circuit.library.SXGate)  |single-qubit gate |
-| [X](/docs/api/qiskit/qiskit.circuit.library.XGate)  | single-qubit gate |
-| [ID](/docs/api/qiskit/qiskit.circuit.library.IGate) | single-qubit gate wait cycle |
-| [reset](/docs/api/qiskit/circuit#qiskit.circuit.Reset)  | single-qubit gate, non-unitary; not the same as the initialization done at the start of a circuit to prepare the all 0's state |
-| [measure](/docs/api/qiskit/circuit#qiskit.circuit.Measure) | |
-| [delay](/docs/api/qiskit/circuit#qiskit.circuit.Delay) |  |
-| [if_else](/docs/api/qiskit/qiskit.circuit.IfElseOp) | control flow for classical feedforward |
+| Single-qubit gates | [RZ](/docs/api/qiskit/qiskit.circuit.library.RZGate), [SX](/docs/api/qiskit/qiskit.circuit.library.SXGate), [X](/docs/api/qiskit/qiskit.circuit.library.XGate), [ID](/docs/api/qiskit/qiskit.circuit.library.IGate), [delay](/docs/api/qiskit/circuit#qiskit.circuit.Delay) |
+| Two-qubit gates | [CZ](/docs/api/qiskit/qiskit.circuit.library.CZGate), ECR](/docs/api/qiskit/qiskit.circuit.library.ECRGate)|
+| Fractional gates | [RX](/docs/api/qiskit/qiskit.circuit.library.RXGate) (single-qubit), [RZZ](/docs/api/qiskit/qiskit.circuit.library.RZZGate) (two-qubit) |
+| Non-unitary instructions | [measure](/docs/api/qiskit/circuit#qiskit.circuit.Measure), [reset](/docs/api/qiskit/circuit#qiskit.circuit.Reset) |
+| Control flow | [if_else](/docs/api/qiskit/qiskit.circuit.IfElseOp) (classical feedforward) |
