--- a/docs/guides/qpu-information.mdx
+++ b/docs/guides/qpu-information.mdx
@@ -111,7 +111,7 @@ You can also view your available QPUs by using the [backends API.](/docs/api/qis
 | Operation category |  Name |
 | :--- | :--- |
 | Single-qubit gates | [RZ](/docs/api/qiskit/qiskit.circuit.library.RZGate), [SX](/docs/api/qiskit/qiskit.circuit.library.SXGate), [X](/docs/api/qiskit/qiskit.circuit.library.XGate), [ID](/docs/api/qiskit/qiskit.circuit.library.IGate), [delay](/docs/api/qiskit/circuit#qiskit.circuit.Delay) |
-| Two-qubit gates | [CZ](/docs/api/qiskit/qiskit.circuit.library.CZGate), ECR](/docs/api/qiskit/qiskit.circuit.library.ECRGate)|
+| Two-qubit gates | [CZ](/docs/api/qiskit/qiskit.circuit.library.CZGate), [ECR](/docs/api/qiskit/qiskit.circuit.library.ECRGate)|
 | Fractional gates | [RX](/docs/api/qiskit/qiskit.circuit.library.RXGate) (single-qubit), [RZZ](/docs/api/qiskit/qiskit.circuit.library.RZZGate) (two-qubit) |
 | Non-unitary instructions | [measure](/docs/api/qiskit/circuit#qiskit.circuit.Measure), [reset](/docs/api/qiskit/circuit#qiskit.circuit.Reset) |
 | Control flow | [if_else](/docs/api/qiskit/qiskit.circuit.IfElseOp) (classical feedforward) |
